# personal_ai_knowledge-assistant

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: config.py  main.py
backend/api/: chat.py  knowledge.py
backend/models/: schemas.py
backend/services/: document_loader.py  embeddings.py  graph.py  knowledge_base.py  llm.py  ocr.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  FileUpload.tsx  ImageUpload.tsx  KnowledgeBase.tsx  MessageBubble.tsx  ModelSelector.tsx  Sidebar.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_api_chat.py  test_api_knowledge.py  test_config.py  test_document_loader.py  test_embeddings.py  test_graph.py  test_knowledge_base.py  test_llm.py  test_schemas.py
